--- a/docker/jjb/Dockerfile
+++ b/docker/jjb/Dockerfile
@@ -1,4 +1,4 @@
-FROM node_test
+FROM lip_bugzilla_node_test
 MAINTAINER Alexander Braverman Masis <abraverm@redhat.com>
 
 RUN rpm --rebuilddb && yum install -y python-pip PyYAML
