--- a/jenkins/infra/docker_build_elk_host.yml
+++ b/jenkins/infra/docker_build_elk_host.yml
@@ -1,12 +1,12 @@
 - job:
-    name: docker-build-elk-host
+    name: logstash-input-bugzilla_docker-build-elk-host
     project-type: freestyle
     description: |
       ELK host is a docker image with docker and other tool enabled for
       running docker inside docker.
-    display-name: 'Docker build ELK-host image'
+    display-name: '[LIP-Bugzilla] Docker build ELK-host image'
     concurrent: false
-    node: docker
+    node: lip-bugzilla_docker
     scm:
       - logstash-input-bugzilla
     builders:
@@ -23,6 +23,6 @@
             echo "============================"
             docker build -t "host_test" .
           else
-            docker tag -f abraverm/jenkins:docker host_test
+            docker tag -f lip_bugzilla/docker host_test
             echo "Nothing changed"
           fi
