Changing naming convention
For having multiple projects on same Jenkins server

Change-Id: If383896b28972e1e8ed3f2a5f7f1ab3f05257e64

--- a/docker/jjb/Dockerfile
+++ b/docker/jjb/Dockerfile
@@ -1,4 +1,4 @@
-FROM node_test
+FROM lip_bugzilla/node_test
 MAINTAINER Alexander Braverman Masis <abraverm@redhat.com>
 
 RUN rpm --rebuilddb && yum install -y python-pip PyYAML
